--- a/src/Module/templates/login.phtml
+++ b/src/Module/templates/login.phtml
@@ -1,14 +1,16 @@
 
 <h1 class="text-center my-3">LogIn</h1>
-<form>
+
+
+<form method="post" action="">
   <div class="form-group">
     <label for="exampleInputEmail1">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+    <input type="email" class="form-control" name="email" aria-describedby="emailHelp" placeholder="Enter email">
     <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
   </div>
   <div class="form-group">
     <label for="exampleInputPassword1">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+    <input type="password" class="form-control" name="pass" placeholder="Password">
   </div>
     
   <button type="submit" class="btn btn-primary">Submit</button>
