--- a/src/Module/templates/register.phtml
+++ b/src/Module/templates/register.phtml
@@ -1,28 +1,28 @@
 <h1 class="text-center my-3">Register</h1>
 
 
-<form>
+<form method="post" action="<?php echo $_SERVER['PHP_SELF']; ?>">
   <div class="form-row">
     <div class="form-group col-md-6">
       <label for="inputEmail4">Full Name</label>
-      <input type="text" class="form-control" id="inputEmail4" placeholder="Enter Your Full Name">
+      <input type="text" class="form-control" name="fName" placeholder="Enter Your Full Name">
     </div>
     <div class="form-group col-md-6">
       <label for="inputPassword4">Email</label>
-      <input type="email" class="form-control" id="inputPassword4" placeholder="Enter Your Email Address">
+      <input type="email" class="form-control" name="email" placeholder="Enter Your Email Address">
     </div>
   </div>
   <div class="form-group">
     <label for="inputAddress">Password</label>
-    <input type="password" class="form-control" id="inputAddress" placeholder="Enter Your Password">
+    <input type="password" class="form-control" name="pass" placeholder="Enter Your Password">
   </div>
   <div class="form-group">
     <label for="inputAddress2">Confirm Password</label>
-    <input type="password" class="form-control" id="inputAddress2" placeholder="Confirm Your Password">
+    <input type="password" class="form-control" name="confirmPass" placeholder="Confirm Your Password">
   </div>
   <div class="form-group">
     <label for="inputAddress2">Mobile Number</label>
-    <input type="number" class="form-control" id="inputAddress2" placeholder="Enter Your Mobile Number">
+    <input type="number" class="form-control" name="mobileNumber" placeholder="Enter Your Mobile Number">
   </div>
  
   <button type="submit" class="btn btn-primary">Sign in</button>
