--- a/src/Module/templates/register.phtml
+++ b/src/Module/templates/register.phtml
@@ -1,7 +1,7 @@
 <h1 class="text-center my-3">Register</h1>
 
 
-<form method="post" action="<?php echo $_SERVER['PHP_SELF']; ?>">
+<form method="post" action="/register">
   <div class="form-row">
     <div class="form-group col-md-6">
       <label for="inputEmail4">Full Name</label>
