--- a/src/App/templates/app/home-page.phtml
+++ b/src/App/templates/app/home-page.phtml
@@ -1,6 +1,9 @@
 <?php
 // $this->layout('layout::navbar',[]);
 
-$this->headTitle('Home'); ?>
+$this->headTitle('Home');
+// echo '<pre>'; 
+// print_r($user);
+?>
 
 <h1 class="text-center my-3">Home Page</h1>
